--- a/Acidmanic.Utilities.Tdd/Acidmanic.Utilities.Tdd.csproj
+++ b/Acidmanic.Utilities.Tdd/Acidmanic.Utilities.Tdd.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Acidmanic.Utilities\Acidmanic.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
