--- a/Acidmanic.Utilities/Acidmanic.Utilities.csproj
+++ b/Acidmanic.Utilities/Acidmanic.Utilities.csproj
@@ -34,14 +34,13 @@
             <PackagePath>LICENSE.txt</PackagePath>
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Content Include="..\Readme.md">
-          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-          <CopyToPublishDirectory>Always</CopyToPublishDirectory>
-        <Link>Readme.md</Link>
-      </Content>
+        <Content Include="..\Readme.md" >
+            <Pack>true</Pack>
+            <PackagePath>/</PackagePath>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+            <Link>Readme.md</Link>
+        </Content>
     </ItemGroup>
 
 </Project>
