--- a/Acidmanic.Utilities.Tdd/Acidmanic.Utilities.Tdd.csproj
+++ b/Acidmanic.Utilities.Tdd/Acidmanic.Utilities.Tdd.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\Acidmanic.Utilities\Acidmanic.Utilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.6-b06" />
+  </ItemGroup>
+
 </Project>
