--- a/Acidmanic.Utilities/Acidmanic.Utilities.csproj
+++ b/Acidmanic.Utilities/Acidmanic.Utilities.csproj
@@ -2,8 +2,9 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+        
     </PropertyGroup>
-
+    
 
     <PropertyGroup>
         <!-- NuGet -->
@@ -45,6 +46,7 @@
 
     <ItemGroup>
       <PackageReference Include="Acidmanic.Utilities.Reflections" Version="1.0.6-b06" />
+      <PackageReference Include="System.Text.Json" Version="8.0.0-preview.7.23375.6" />
     </ItemGroup>
 
 </Project>
