--- a/Acidmanic.Utilities/Acidmanic.Utilities.csproj
+++ b/Acidmanic.Utilities/Acidmanic.Utilities.csproj
@@ -10,7 +10,7 @@
         <!-- NuGet -->
         <Id>Acidmanic.Utilities</Id>
         <PackageId>Acidmanic.Utilities</PackageId>
-        <Version>1.0.14-internal01</Version>
+        <Version>1.0.14</Version>
         <Authors>Mani Moayedi</Authors>
         <Company>Acidmanic</Company>
         <PackageIcon>Graphics/icon.png</PackageIcon>
