--- a/Acidmanic.Utilities.Tdd/Acidmanic.Utilities.Tdd.csproj
+++ b/Acidmanic.Utilities.Tdd/Acidmanic.Utilities.Tdd.csproj
@@ -2,11 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+<!--    <TargetFramework>netcoreapp3.1</TargetFramework>-->
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Acidmanic.Utilities\Acidmanic.Utilities.csproj" />
+    <ProjectReference Include="..\Sample.Contract\Sample.Contract.csproj" />
   </ItemGroup>
 
   <ItemGroup>
