--- a/Acidmanic.Utilities/Acidmanic.Utilities.csproj
+++ b/Acidmanic.Utilities/Acidmanic.Utilities.csproj
@@ -11,7 +11,7 @@
         <!-- NuGet -->
         <Id>Acidmanic.Utilities</Id>
         <PackageId>Acidmanic.Utilities</PackageId>
-        <Version>1.0.21</Version>
+        <Version>1.0.22-b01</Version>
         <Authors>Mani Moayedi</Authors>
         <Company>Acidmanic</Company>
         <PackageIcon>Graphics/icon.png</PackageIcon>
